--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Carlos Alvarez <beardedframework@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@beardedframework/axe": "file:/var/www/html/bearded-axe",
     "@beardedframework/lumberjack": "^0.1.13",
     "@types/node": "7.0.22",
     "nodemon": "1.11.0"
