created the templates folder

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "Carlos Alvarez <beardedframework@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@beardedframework/axe": "file:/var/www/html/bearded-axe",
+    "@beardedframework/axe": "^0.0.6",
     "@beardedframework/lumberjack": "^0.1.13",
     "@types/node": "7.0.22",
     "nodemon": "1.11.0"
